--- a/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
+++ b/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>PIC_Assembler</RootNamespace>
+        <RootNamespace>PIC.Assembler</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
