feat: added high level project structure with models

--- a/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
+++ b/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
@@ -3,9 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>PIC.Assembler</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PIC.Assembler.Application\PIC.Assembler.Application.csproj" />
+    </ItemGroup>
 
 </Project>
