--- a/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
+++ b/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
@@ -11,13 +11,26 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="FluentAssertions" Version="6.12.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Moq" Version="4.20.70"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\PIC.Assembler.Adapter\PIC.Assembler.Adapter.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="Out\**\TestData\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+
     </ItemGroup>
 
 </Project>
