refactor: extracted common code for FileParserAdapter.cs

--- a/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
+++ b/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\PIC.Assembler.Application\PIC.Assembler.Application.csproj" />
+      <ProjectReference Include="..\PIC.Assembler.Common\PIC.Assembler.Common.csproj" />
     </ItemGroup>
 
 </Project>
