test: renamed FileTokenizerAdapterTests test data folder

--- a/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
+++ b/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="Out\**\TestData\**">
+        <Content Include="Out\**\*TestData\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
 
