--- a/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
+++ b/PIC.Assembler.Adapter.Tests/PIC.Assembler.Adapter.Tests.csproj
@@ -30,7 +30,12 @@
         <Content Include="Out\**\*TestData\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+    </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="Integration\**\*TestData\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
