--- a/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
+++ b/PIC.Assembler.Adapter/PIC.Assembler.Adapter.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\PIC.Assembler.Common\PIC.Assembler.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    </ItemGroup>
+
 </Project>
